--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap");
 @import "variables";
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background-color: $red;
+  font-family: $quicksand;
 }
