--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -12,8 +12,6 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  // background-color: #626a78;
   overflow: hidden;
   position: relative;
 }
@@ -24,17 +22,20 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/sushi-second.jpg);
+  background-image: url(../img/sushi_main.jpg);
   background-repeat: no-repeat;
+  background-position: top;
   background-size: cover;
   z-index: -1;
   filter: blur(7px) brightness(0.4);
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .container {
-  min-width: 1200px;
+  flex: 0 1 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .nav {
   margin-top: 40px;
@@ -47,6 +48,7 @@
     text-transform: uppercase;
     font-family: $josefin;
     cursor: pointer;
+    text-decoration: none;
   }
 
   &__logo {
@@ -60,6 +62,9 @@
   &__heading {
   }
   &__h1 {
+    font-family: $quicksand;
+    color: white;
+    font-weight: 300;
   }
 }
 
