Add styling to the picture and the nav booknow element

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -26,7 +26,7 @@
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  z-index: -1;
+  z-index: -20;
   filter: blur(7px) brightness(0.4);
   transform: scale(1.1);
 }
@@ -49,6 +49,7 @@
     font-family: $josefin;
     cursor: pointer;
     text-decoration: none;
+    padding: 15px 15px;
   }
 
   &__logo {
@@ -58,15 +59,75 @@
   }
 }
 
+.nav__el.booknow {
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+}
+
+.info {
+  flex: 1 1 70vh;
+  display: flex;
+  justify-content: space-around;
+}
 .main {
+  flex: 0 1 60vw;
+  align-self: center;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  margin-left: 200px;
+  z-index: 200;
+
+  &__promo {
+    font-size: 16px;
+    font-weight: 300;
+    color: white;
+    text-transform: uppercase;
+    font-family: $quicksand;
+    margin-bottom: 20px;
+  }
+
   &__heading {
+    flex: 0 1 500px;
   }
   &__h1 {
     font-family: $quicksand;
     color: white;
     font-weight: 300;
+    line-height: 50px;
+    letter-spacing: 4px;
+    margin-bottom: 30px;
   }
 }
 
 .btn {
+  font-family: $quicksand;
+  cursor: pointer;
+  font-size: 18px;
+  color: white;
+  text-transform: uppercase;
+  background-color: red;
+  padding: 10px 20px;
+}
+
+.side {
+  flex: 0 1 60vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+
+  &__imgcontainer {
+    width: 45vw;
+    height: 70vh;
+    margin-left: -100px;
+    z-index: 1;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.7);
+  }
 }
