--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -49,13 +49,37 @@
     font-family: $josefin;
     cursor: pointer;
     text-decoration: none;
-    padding: 15px 15px;
+    padding: 10px 20px;
+    position: relative;
+
+    &::after {
+      background: none repeat scroll 0 0 transparent;
+      bottom: 0;
+      content: "";
+      display: block;
+      height: 2px;
+      left: 50%;
+      position: absolute;
+      background: $myred;
+      transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      width: 0;
+    }
+    &:hover:after {
+      width: 100%;
+      left: 0;
+    }
   }
 
   &__logo {
-    width: 50px;
-    height: 50px;
-    background-color: white;
+    width: 100px;
+    height: 70px;
+    // background-color: white;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
@@ -106,7 +130,7 @@
   font-size: 18px;
   color: white;
   text-transform: uppercase;
-  background-color: red;
+  background-color: $myred;
   padding: 10px 20px;
 }
 
