--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -105,6 +105,7 @@
   &__promo {
     font-size: 16px;
     font-weight: 300;
+    letter-spacing: 4px;
     color: white;
     text-transform: uppercase;
     font-family: $quicksand;
@@ -121,6 +122,7 @@
     line-height: 50px;
     letter-spacing: 4px;
     margin-bottom: 30px;
+    margin-top: 20px;
   }
 }
 
