--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -73,8 +73,6 @@
   &__logo {
     width: 100px;
     height: 70px;
-    // background-color: white;
-
     img {
       width: 100%;
       height: 100%;
@@ -133,7 +131,12 @@
   color: white;
   text-transform: uppercase;
   background-color: $myred;
+  transition: all 0.3s ease 0s, left 0.3s ease 0s;
+
   padding: 10px 20px;
+  &:hover {
+    background-color: black;
+  }
 }
 
 .side {
