--- a/src/style/_menu.scss
+++ b/src/style/_menu.scss
@@ -1,13 +1,17 @@
 .menu {
+  flex: 1 1 60vh;
   background-color: white;
   margin-top: 50px;
   width: 100%;
-  height: 60vh;
   display: flex;
+  flex-wrap: wrap;
+
+  &__heading {
+    width: 100%;
+  }
 
   &__imgcont {
-    flex: 1 1 300px;
-    background-color: red;
+    flex: 1 1 250px;
     margin: 20px;
     position: relative;
     img {
@@ -19,10 +23,36 @@
 
   &__info {
     position: absolute;
-    bottom: 20%;
+    width: 80%;
+    bottom: 10%;
     left: 50%;
     transform: translate(-50%);
     padding: 10px;
     background-color: rgba(197, 197, 197, 0.685);
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__span {
+    align-self: center;
+    margin: 10px 0;
+    font-family: $quicksand;
+    font-weight: 600;
+  }
+  &__h2 {
+    font-size: 18px;
+    font-family: $quicksand;
+    align-self: center;
+  }
+  &__btn {
+    margin-top: 10px;
+    background-color: $myred;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    text-transform: uppercase;
+    font-family: $josefin;
+    display: flex;
+    justify-content: center;
   }
 }
