--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap");
-@import "variables", "menu";
+@import "variables", "menu", "contact";
 
 * {
   padding: 0;
