--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .nav {
   margin-top: 40px;
   display: flex;
@@ -53,7 +54,6 @@
     position: relative;
 
     &::after {
-      background: none repeat scroll 0 0 transparent;
       bottom: 0;
       content: "";
       display: block;
@@ -64,7 +64,8 @@
       transition: width 0.3s ease 0s, left 0.3s ease 0s;
       width: 0;
     }
-    &:hover:after {
+
+    &:hover::after {
       width: 100%;
       left: 0;
     }
@@ -73,6 +74,7 @@
   &__logo {
     width: 100px;
     height: 70px;
+
     img {
       width: 100%;
       height: 100%;
@@ -82,7 +84,7 @@
 }
 
 .nav__el.booknow {
-  border: 1px solid #ffffff;
+  border: 1px solid #fff;
   border-radius: 5px;
 }
 
@@ -91,6 +93,7 @@
   display: flex;
   justify-content: space-around;
 }
+
 .main {
   flex: 0 1 60vw;
   align-self: center;
@@ -113,6 +116,7 @@
   &__heading {
     flex: 0 1 500px;
   }
+
   &__h1 {
     font-family: $quicksand;
     color: white;
@@ -132,8 +136,8 @@
   text-transform: uppercase;
   background-color: $myred;
   transition: all 0.3s ease 0s, left 0.3s ease 0s;
-
   padding: 10px 20px;
+
   &:hover {
     background-color: black;
   }
